Fix z-index re: footer for desktop

--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,7 @@ footer {
     background-color: white;
     color: black;
     text-align: right;
+    z-index: -10;
   }
   footer svg {
     margin: 1em;
